[project]
name = "obelisk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.2.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pytelegrambotapi>=4.26.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
]
